--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">mexico</string>
+    <string name="app_name">Fogon Mexicano</string>
+    <string name="menu">MENU</string>
+    <string name="btnComprar">Comprar</string>
+    <string name="btnReiniciar">Reiniciar Cuenta</string>
 </resources>
